--- a/code/MoodSync/app/src/main/res/layout/fragment_first.xml
+++ b/code/MoodSync/app/src/main/res/layout/fragment_first.xml
@@ -4,54 +4,57 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fillViewport="true"
     tools:context=".SecondFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#203434">
-
-        <TextView
-            android:id="@+id/welcome_to_"
-            android:layout_width="438dp"
-            android:layout_height="85dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="529dp"
-            android:text="@string/welcome_to_"
-            android:textAppearance="@style/welcome_to_"
-            android:lineSpacingExtra="-13sp"
-            android:gravity="center" />
-        <!-- Font: Comfortaa, Line height: 32sp -->
-
-        <Button
-            android:id="@+id/button"
-            android:layout_width="224dp"
-            android:layout_height="56dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="788dp"
-            android:background="@drawable/button"
-            android:text="Click Me"
-            android:textColor="#FFFFFF"
-            android:textSize="16sp" />
-
-        <TextView
-            android:id="@+id/share_your_"
-            android:layout_width="343dp"
-            android:layout_height="54dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="632dp"
-            android:text="@string/share_your_"
-            android:textAppearance="@style/share_your_"
-            android:lineSpacingExtra="14sp"
-            android:gravity="center" />
-        <!-- Font: Comfortaa, Line height: 32sp -->
+        android:layout_height="wrap_content"
+        android:background="#203434"
+        android:paddingBottom="32dp">
 
         <RelativeLayout
             android:id="@+id/social_media"
             android:layout_width="333dp"
             android:layout_height="333dp"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="146dp" />
+            android:layout_marginTop="32dp" />
+
+        <TextView
+            android:id="@+id/welcome_to_"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/social_media"
+            android:layout_marginTop="32dp"
+            android:gravity="center"
+            android:lineSpacingExtra="-13sp"
+            android:text="@string/welcome_to_"
+            android:textAppearance="@style/welcome_to_" />
+
+        <TextView
+            android:id="@+id/share_your_"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/welcome_to_"
+            android:layout_marginTop="84dp"
+            android:gravity="center"
+            android:lineSpacingExtra="14sp"
+            android:text="@string/share_your_"
+            android:textAppearance="@style/share_your_" />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="224dp"
+            android:layout_height="56dp"
+            android:layout_below="@id/share_your_"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="122dp"
+            android:layout_marginTop="130dp"
+            android:layout_marginEnd="128dp"
+            android:text="Get Started"
+            android:textColor="#FFFFFF"
+            android:textSize="16sp" />
 
     </RelativeLayout>
 
