--- a/code/MoodSync/app/src/main/res/navigation/nav_graph.xml
+++ b/code/MoodSync/app/src/main/res/navigation/nav_graph.xml
@@ -10,7 +10,6 @@
         android:name="com.example.moodsync.FirstFragment"
         android:label="@string/first_fragment_label"
         tools:layout="@layout/fragment_first">
-
         <action
             android:id="@+id/action_FirstFragment_to_SecondFragment"
             app:destination="@id/SecondFragment" />
@@ -19,10 +18,34 @@
         android:id="@+id/SecondFragment"
         android:name="com.example.moodsync.SecondFragment"
         android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second">
+        tools:layout="@layout/styles">
 
         <action
             android:id="@+id/action_SecondFragment_to_FirstFragment"
             app:destination="@id/FirstFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/SecondFragment"
+        android:name="com.example.moodsync.SecondFragment"
+        android:label="@string/second_fragment_label"
+        tools:layout="@layout/styles">
+
+        <action
+            android:id="@+id/action_SecondFragment_to_FirstFragment"
+            app:destination="@id/FirstFragment" />
+        <action
+            android:id="@+id/action_SecondFragment_to_addMoodActivityFragment"
+            app:destination="@id/addMoodActivityFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/addMoodActivityFragment"
+        android:name="com.example.moodsync.AddMoodActivity"
+        android:label="Add Mood"
+        tools:layout="@layout/addmoodfragment">
+        <action
+            android:id="@+id/action_addMoodActivityFragment_to_SecondFragment"
+            app:destination="@id/SecondFragment" />
+    </fragment>
+
 </navigation>
