--- a/code/MoodSync/app/src/main/res/values/styles.xml
+++ b/code/MoodSync/app/src/main/res/values/styles.xml
@@ -1,69 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Existing styles -->
     <style name="welcome_to_">
         <item name="android:textSize">40sp</item>
         <item name="android:letterSpacing">0.01</item>
         <item name="android:textColor">#FFFFFF</item>
     </style>
+
     <style name="share_your_">
         <item name="android:textSize">16sp</item>
         <item name="android:letterSpacing">0.03</item>
         <item name="android:textColor">#FFFFFF</item>
     </style>
+
     <style name="some_id">
         <item name="android:textSize">17sp</item>
         <item name="android:letterSpacing">0.03</item>
         <item name="android:textColor">#CAC4D0</item>
     </style>
 
-    <!-- strings.xml -->
-    <string name="some_id">
-        1/2
-    </string>
     <style name="up_to_12_mb">
         <item name="android:textSize">12sp</item>
         <item name="android:letterSpacing">0.04</item>
         <item name="android:textColor">#D7D2CC</item>
     </style>
 
-    <!-- strings.xml -->
-    <string name="up_to_12_mb">
-        (up to 12 Mb)
-    </string>
     <style name="add_from_ca">
         <item name="android:textSize">15sp</item>
         <item name="android:letterSpacing">0.03</item>
         <item name="android:textColor">#D7D2CC</item>
     </style>
 
-    <!-- strings.xml -->
-    <string name="add_from_ca">
-        Add from Camera
-    </string>
     <style name="add_from_ph">
         <item name="android:textSize">15sp</item>
         <item name="android:letterSpacing">0.03</item>
         <item name="android:textColor">#D7D2CC</item>
     </style>
 
-    <!-- strings.xml -->
-    <string name="add_from_ph">
-        Add from Photos
-    </string>
     <style name="add_your_de">
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">#D7D2CC</item>
     </style>
+
     <style name="pick_your_e">
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">#D7D2CC</item>
     </style>
+
     <style name="pick_your_m">
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">#D7D2CC</item>
     </style>
+
     <style name="cancel">
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">#D7D2CC</item>
+    </style>
+
+    <!-- New styles -->
+    <style name="CircleImageView" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">50%</item>
+    </style>
+
+    <style name="RoundedCardView" parent="@style/Widget.MaterialComponents.CardView">
+        <item name="shapeAppearanceOverlay">@style/ShapeAppearanceOverlay.MaterialCardView.Cut</item>
+    </style>
+
+    <style name="ShapeAppearanceOverlay.MaterialCardView.Cut" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSizeTopRight">16dp</item>
+        <item name="cornerSizeTopLeft">16dp</item>
+        <item name="cornerSizeBottomRight">16dp</item>
+        <item name="cornerSizeBottomLeft">16dp</item>
     </style>
 </resources>
